# elevenlabs-websockets-demo

./: README.md  guide.mdx
backend/: .env.example  .gitignore  README.md  pyproject.toml
backend/src/: main.py
frontend/: package-lock.json  package.json
frontend/app/: layout.tsx  page.tsx
